working on new feeds chat icon alignment issues .

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -276,6 +276,7 @@ div.phone-number{
 
 .icon-full-star {
     color: #ffe108;
+    width: 35px !important;
 }
 .icon-empty-star {
     color: #ebeded;
@@ -1152,7 +1153,7 @@ img.profile-pic.right {
 }
 .always-on .icon{
   font-size:40px !important;
-  margin-top: -3px !important;
+  /*margin-top: -3px !important;*/
   margin-top: 0px;
 }
 .item-avatar, .item-avatar .item-content, .item-avatar-left, .item-avatar-left .item-content{
@@ -1356,14 +1357,14 @@ img.pro_pic_img
   padding: 0 !important;
 }
 .comment_footer_wrapper .camera_icon {
-  margin: 1px 0 0 !important;
+  margin: 3px 0 0 !important;
   padding: 0 !important;
   float: left;
   position: relative;
 }
 .comment_footer_wrapper .camera_icon img
 {
-  width: 25px !important;
+  width: 28px !important;
 }
 /*.tribys_pic_circle
 {
@@ -1618,13 +1619,15 @@ img.pro_pic_img
   clear: both;
   overflow: hidden;
   background: #f6f6f6;
-  border: 1px solid #7b7b7b;
-  border-radius: 10px;
+  border: none;
+  border-radius: 20px;
 }
 .confirmation_popup .popup
 {
   width: 100% !important;
   background: #f6f6f6 !important;
+  border-radius: 15px !important;
+  border: 1px solid #7e7e7e;
 }
 .confirmation_popup .popup .popup-body
 {
@@ -1693,6 +1696,7 @@ img.pro_pic_img
   height: 50px !important;
   background: none !important;
   border: none !important;
+  border-radius: 0;
 }
 .confirmation_popup .bottom_button_box div:first-child,
 .confirmation_popup .popup .popup-buttons button:first-child{border-right: 1px solid #c6c6c6 !important;}
@@ -1704,3 +1708,90 @@ img.pro_pic_img
   background: #006edb;
 }
 .homepage_blue_area .item{padding: 5px 0 0 !important;}
+.create_new_tribys_icons {
+  margin: -2px 0 0 0 !important;
+}
+.chat_message_area {
+  margin: 0;
+  padding: 0;
+  float: left;
+  width: 100%;
+  height: inherit;
+  position: relative;
+  clear: both;
+  border-top: 1px solid #d6d6d6;
+}
+.chat_mesg_footer_bar {
+  border: none !important;
+}
+.news_feed_icon_wrapper
+{
+  margin: 0;
+  padding: 0;
+  float: left;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  clear: both;
+  text-align: center;
+}
+.left_chat_icon {
+  margin: 8px 0 0 0;
+  padding: 0;
+  float: left;
+  width: 60%;
+  height: inherit;
+  position: relative;
+}
+.right_chat_icon {
+  margin: 0;
+  padding: 0;
+  float: right;
+  width: 40%;
+  height: inherit;
+  position: relative;
+}
+.left_chat_icon div,
+.right_chat_icon div
+{
+  margin: 0 5px !important;
+  padding: 0 !important;
+  float: left !important;
+  width: auto !important;
+  position: relative !important;
+  overflow: hidden !important;
+}
+.left_chat_icon div img,
+.right_chat_icon div img {
+  margin: 0 ;
+  padding: 0 ;
+  float: left ;
+  width: 25px !important;
+  height: 25px !important;
+  position: relative ;
+  top: 0 ;
+  bottom: 0 ;
+  left: 0 ;
+  right: 0 ;
+  overflow: hidden ;
+}
+.left_chat_icon .heart img {
+  margin: -4px 0 0 0;
+  width: 35px !important;
+  height: 35px !important;
+}
+.left_chat_icon div span,
+.right_chat_icon div span {
+  margin: 15px 0px 0 5px ;
+  padding: 0 ;
+  float: left ;
+  line-height: 12px ;
+  width: auto ;
+  height: auto ;
+  position: relative ;
+  top: 0 ;
+  bottom: 0 ;
+  left: 0 ;
+  right: 0 ;
+  overflow: hidden;
+}
